@@ -2,6 +2,9 @@ package com.bloxbean.cardano.client.plutus.annotation.processor.blueprint;
 
 import com.google.testing.compile.Compilation;
 import com.google.testing.compile.JavaFileObjects;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.io.IOException;
@@ -14,6 +17,10 @@ import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * Tests for SundaeSwap DEX blueprint annotation processing (Plutus v2).
+ *
+ * <p>This blueprint was compiled with Aiken v1.0.26-alpha and uses <b>stdlib V1</b> schemas.
+ * The {@code @AikenStdlib(V1)} annotation tells the processor to resolve matching schemas
+ * against V1 registry entries, producing shared stdlib types instead of blueprint-specific ones.</p>
  *
  * <p><b>Current Issue:</b> The code generator incorrectly extracts variant titles instead of
  * using the actual type reference. For example:</p>
@@ -30,16 +37,17 @@ import static org.assertj.core.api.Assertions.assertThat;
  */
 public class SundaeSwapV2Test {
 
-    @Test
-    //@Disabled("Code generator incorrectly extracts variant titles instead of using $ref types")
-    void sundaeSwap() {
-        Compilation compilation =
-                javac()
-                        .withProcessors(new BlueprintAnnotationProcessor())
-                        .compile(
-                                JavaFileObjects.forResource("blueprint/SundaeSwapV2.java")
-                        );
+    private static Compilation compilation;
 
+    @BeforeAll
+    static void setUp() {
+        compilation = javac()
+                .withProcessors(new BlueprintAnnotationProcessor())
+                .compile(JavaFileObjects.forResource("blueprint/SundaeSwapV2.java"));
+    }
+
+    @Test
+    void sundaeSwap() {
         System.out.println(compilation.diagnostics());
 
         compilation.generatedFiles().forEach(javaFileObject -> {
@@ -59,6 +67,104 @@ public class SundaeSwapV2Test {
         // PlutusData should only be used when explicitly specified in CIP-57 schema as "Data" type
         // All other types (Option, List, domain-specific types) should be properly typed
         verifyNoOpaqueTypes(compilation);
+    }
+
+    @Nested
+    @DisplayName("V1 stdlib shared type resolution")
+    class SharedTypeResolutionTests {
+
+        @Test
+        @DisplayName("Credential should be resolved as shared V1 stdlib type, not generated")
+        void credentialResolvedAsSharedType() {
+            assertThat(compilation).succeeded();
+
+            // V1 Credential schema (VerificationKeyCredential/ScriptCredential with ByteArray refs)
+            // matches the V1 registry entry → resolved as shared std.Credential
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.annotation.blueprint.sundaeswap.aiken.transaction.credential.model.Credential"))
+                    .as("Credential should be resolved as shared V1 stdlib type, not generated")
+                    .isEmpty();
+        }
+
+        @Test
+        @DisplayName("Address should be resolved as shared V1 stdlib type, not generated")
+        void addressResolvedAsSharedType() {
+            assertThat(compilation).succeeded();
+
+            // V1 Address schema (refs Credential + Option$Referenced$Credential)
+            // matches the V1 registry entry → resolved as shared std.Address
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.annotation.blueprint.sundaeswap.aiken.transaction.credential.model.Address"))
+                    .as("Address should be resolved as shared V1 stdlib type, not generated")
+                    .isEmpty();
+        }
+
+        @Test
+        @DisplayName("Referenced (StakeCredential) should be resolved as shared V1 stdlib type, not generated")
+        void referencedCredentialResolvedAsSharedType() {
+            assertThat(compilation).succeeded();
+
+            // V1 Referenced$Credential schema (Inline refs Credential, Pointer with 3 Int fields)
+            // matches the V1 registry entry → resolved as shared std.ReferencedCredential
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.annotation.blueprint.sundaeswap.aiken.transaction.credential.model.Referenced"))
+                    .as("Referenced (StakeCredential) should be resolved as shared V1 stdlib type, not generated")
+                    .isEmpty();
+        }
+
+        @Test
+        @DisplayName("OutputReference should be resolved as shared V1 stdlib type, not generated")
+        void outputReferenceResolvedAsSharedType() {
+            assertThat(compilation).succeeded();
+
+            // V1 OutputReference schema (nested TransactionId wrapper + Int)
+            // matches the V1 registry entry → resolved as shared std.OutputReferenceV1
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.annotation.blueprint.sundaeswap.aiken.transaction.model.OutputReference"))
+                    .as("OutputReference should be resolved as shared V1 stdlib type, not generated")
+                    .isEmpty();
+        }
+
+        @Test
+        @DisplayName("Shared stdlib converters should be generated")
+        void sharedStdlibConvertersGenerated() {
+            assertThat(compilation).succeeded();
+
+            // When types are resolved as shared stdlib types, their converters are generated
+            // in the std converter package
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.aiken.blueprint.std.converter.CredentialConverter"))
+                    .as("CredentialConverter should be generated for shared V1 stdlib type")
+                    .isPresent();
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.aiken.blueprint.std.converter.AddressConverter"))
+                    .as("AddressConverter should be generated for shared V1 stdlib type")
+                    .isPresent();
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.aiken.blueprint.std.converter.ReferencedCredentialConverter"))
+                    .as("ReferencedCredentialConverter should be generated for shared V1 stdlib type")
+                    .isPresent();
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.aiken.blueprint.std.converter.OutputReferenceV1Converter"))
+                    .as("OutputReferenceV1Converter should be generated for shared V1 stdlib type")
+                    .isPresent();
+        }
+
+        @Test
+        @DisplayName("SundaeSwap-specific types should still be generated")
+        void sundaeSwapSpecificTypesGenerated() {
+            assertThat(compilation).succeeded();
+
+            // Blueprint-specific types that don't match any stdlib schema should still be generated
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.annotation.blueprint.sundaeswap.types.order.model.Order"))
+                    .as("Order (SundaeSwap-specific) should still be generated")
+                    .isPresent();
+            assertThat(compilation.generatedSourceFile(
+                    "com.bloxbean.cardano.client.plutus.annotation.blueprint.sundaeswap.types.pool.model.PoolDatum"))
+                    .as("PoolDatum (SundaeSwap-specific) should still be generated")
+                    .isPresent();
+        }
     }
 
     /**
@@ -97,14 +203,17 @@ public class SundaeSwapV2Test {
         // Find PlutusData fields
         List<String> plutusDataFields = allGeneratedSources.lines()
                 .filter(line -> line.trim().matches("private\\s+PlutusData\\s+\\w+;"))
-                .collect(Collectors.toList());
+                .toList();
 
-        // Filter out legitimate PlutusData fields (extension/data fields per CIP-57 abstract Data type)
+        // Filter out legitimate PlutusData fields:
+        // - extension/extensions: arbitrary extensibility data per protocol design
+        // - data: CIP-57 abstract Data type (InlineDatum.data, RedeemerWrapper.data)
+        // Note: 3+ item tuples now generate ListPlutusData, so they won't match the PlutusData regex
         List<String> illegitimateFields = plutusDataFields.stream()
                 .filter(line -> !line.contains("extensions")
                         && !line.contains("extension")
                         && !line.contains(" data;"))
-                .collect(Collectors.toList());
+                .toList();
 
         if (!illegitimateFields.isEmpty()) {
             System.out.println("\n=== Found ILLEGITIMATE PlutusData fields (should be typed) ===");
@@ -115,8 +224,8 @@ public class SundaeSwapV2Test {
         assertThat(illegitimateFields.size())
                 .as("Generated sources should not have untyped PlutusData for containers. " +
                     "Option<T> should be Optional<T>, List<T> should be List<T>. " +
-                    "PlutusData is ONLY allowed for: extension/extensions fields, and 'data' fields " +
-                    "(these reference CIP-57 abstract 'Data' type).\n" +
+                    "PlutusData is ONLY allowed for: extension/extensions fields and 'data' fields " +
+                    "(CIP-57 abstract 'Data' type). 3+ item tuples should be ListPlutusData.\n" +
                     "Found illegitimate fields: " + illegitimateFields)
                 .isZero();
     }
